--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "multiple-sorting",
-  "version": "1.0.22",
+  "name": "lyy-utils",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
