fix(promiselimit)修改了控制并发函数

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "nuxt.isNuxtApp": false
+    "nuxt.isNuxtApp": false,
+    "z-reader.cookies": [
+        {
+            "_yep_uuid":"d4d667db-21a6-43a1-a6ec-e8b3cec15a3b"
+        }
+    ]
 }
